gitops/apps/kubevirt-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubevirt-manager
  annotations:
    cert-manager.io/cluster-issuer: root-logicmg
    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-signin: https://virt.logicmg.intra/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/auth-url: http://internal-authentik.internal.svc.cluster.local/outpost.goauthentik.io/auth/nginx
spec:
  rules:
  - host: "virt.logicmg.intra"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubevirt-manager
            port:
              number: 8080
  tls:
  - hosts:
    - "virt.logicmg.intra"
    secretName: kubevirt-manager-tls
